replaced sone new SubclassOfNumber with the equivalent SubclassOfNumber.valueOf in module's parsing.